Changed "Move all to new file" to "Move selected to new file"

--- a/McTools.Xrm.Connection.WinForms/ConnectionSelector.resx
+++ b/McTools.Xrm.Connection.WinForms/ConnectionSelector.resx
@@ -232,7 +232,7 @@
         f0s6vBMqepnsDxq2UU2GLTjbAAAAAElFTkSuQmCC
 </value>
   </data>
-  <data name="tsbMoveAllToNewFile.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="tsbMoveToNewFile.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
         YQUAAAAJcEhZcwAAFiUAABYlAUlSJPAAAAJdSURBVDhPjZHdT5JhGMafv6Sj/oMOVdQS0tlWIemKLw9c
