--- a/McTools.Xrm.Connection.WinForms/Properties/Resources.resx
+++ b/McTools.Xrm.Connection.WinForms/Properties/Resources.resx
@@ -194,6 +194,9 @@ Note that this is required to validate this wizard</value>
   <data name="ConnectionWizard_UnableToDetermineOrganizationFromUrl" xml:space="preserve">
     <value>Unable to identify organization from url, please review it!</value>
   </data>
+  <data name="connection-string-32" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\connection-string-32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="logo_32" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\logo_32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -218,7 +221,7 @@ Note that this is required to validate this wizard</value>
   <data name="logo_0100" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\logo_0100.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="connection-string-32" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\connection-string-32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="Dataverse.32x32" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Dataverse.32x32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
