--- a/McTools.Xrm.Connection.WinForms/Properties/Resources.resx
+++ b/McTools.Xrm.Connection.WinForms/Properties/Resources.resx
@@ -130,6 +130,9 @@
   <data name="LogoDyn365" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\LogoDyn365.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Dataverse.32x32" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Dataverse.32x32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="ConnectionWizard_ErrorHeaderDescription" xml:space="preserve">
     <value>Your information have not been validated</value>
   </data>
@@ -221,7 +224,7 @@ Note that this is required to validate this wizard</value>
   <data name="logo_0100" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\logo_0100.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="Dataverse.32x32" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Dataverse.32x32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="world" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\world.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
